--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "landing_page",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Julian-Carelli.github.io/Landing-Page",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -10,6 +11,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
@@ -18,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.14.1"
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "gh-pages": "^3.1.0"
   }
 }
